chore(website): upgrade docusaurus, fix dark mode palette

--- a/packages/website/src/css/custom.css
+++ b/packages/website/src/css/custom.css
@@ -8,7 +8,7 @@
 @import './prism.css';
 
 /* You can override the default Infima variables here. */
-html:root {
+html {
   --ifm-color-primary: #3578e5;
   --ifm-color-primary-dark: #1b62d4;
   --ifm-color-primary-darker: #1751af;
